--- a/.github/workflows/project_automation.yml
+++ b/.github/workflows/project_automation.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Move issue to ${{ env.todo }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ env.todo }}
   issue_assigned:
@@ -44,9 +44,9 @@ jobs:
       - name: Move issue to ${{ env.in_progress }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ env.in_progress }}
   issue_unassigned:
@@ -57,9 +57,9 @@ jobs:
       - name: Move issue to ${{ env.todo }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ env.todo }}
   issue_closed:
@@ -70,9 +70,9 @@ jobs:
       - name: Moved issue to ${{ env.done }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.issue.node_id }}
           status_value: ${{ env.done }}
   pr_opened:
@@ -83,9 +83,9 @@ jobs:
       - name: Move issue to ${{ env.in_progress }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.pull_request.node_id }}
           status_value: ${{ env.in_progress }}
   pr_in_review:
@@ -96,9 +96,9 @@ jobs:
       - name: Move issue to ${{ env.in_review }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.pull_request.node_id }}
           status_value: ${{ env.in_review }}
   pr_closed:
@@ -109,8 +109,8 @@ jobs:
       - name: Move issue to ${{ env.done }}
         uses: leonsteinhaeuser/project-beta-automations@v2.0.1
         with:
-          gh_token: ${{ secrets.SECRET_TOKEN }}
+          gh_token: ${{ secrets.SECRET_GH_TOKEN }}
           user: AdrienGomes
-          project_id: 1
+          project_id: 2
           resource_node_id: ${{ github.event.pull_request.node_id }}
           status_value: ${{ env.done }}
