--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -20,9 +20,9 @@ services:
     image: postgres:14.1-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_USER: /run/secrets/postgres_username
-      POSTGRES_PASSWORD: /run/secrets/postgres_password
-      POSTGRES_DB: /run/secrets/postgres_db_name
+      POSTGRES_USER_FILE: /run/secrets/postgres_username
+      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+      POSTGRES_DB_FILE: /run/secrets/postgres_db_name
     ports:
       - "5432:5432"
     volumes:
