Create Keycloak server

--- a/Backend/IMINBackend/appsettings.json
+++ b/Backend/IMINBackend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Postgres": {
-    "Host": "postgres",
+    "Host": "postgres_backend",
     "Username": "## SHOULD BE EXPOSED AS ENV VAR IN DOCKER ##",
     "Password": "## SHOULD BE EXPOSED AS ENV VAR IN DOCKER ##",
     "DbName": "## SHOULD BE EXPOSED AS ENV VAR IN DOCKER ##",
