--- a/Backend/IMINBackend.Services/IMINBackend.Services.csproj
+++ b/Backend/IMINBackend.Services/IMINBackend.Services.csproj
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
